[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tha-terragrunt"
description = "Module to execute and obtain terragrunt state in order to perform further operation on services' resources through the AWS API."
version = "0.1.8"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'objectpath',
    'boto3',
    'pyhcl',
    'python-hcl2==4.2.0'
]

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest"]

[tool.bumpver]
current_version = "0.1.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
	'version = "{version}"'
]
"src/terragrunt/__init__.py" = ["{version}"]