[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tha-terragrunt"
description = "Module used to interact with Terragrunt and OpenTofu/Terraform state data."
readme = "README.md"
version = "0.2.0"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    'tha-objectpath>=0.7.0',
    'boto3>=1.40.56',
    'pyhcl>=0.4.5',
    'python-hcl2>=7.3.1'
]

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest"]

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
	'version = "{version}"'
]

"src/terragrunt/__init__.py" = ["{version}"]
